--- a/dev/grunt/config/.csslintrc
+++ b/dev/grunt/config/.csslintrc
@@ -28,5 +28,8 @@
   "important": false,
   "overqualified-elements": false,
   "universal-selector": false,
-  "regex-selectors": false
+  "regex-selectors": false,
+  "ids": false,
+  "vendor-prefix": false,
+  "zero-units": false
 }
