--- a/app/www/server/package.json
+++ b/app/www/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node bin/www.js",
+    "start forever": "forever start bin/www.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
