--- a/app/www/server/package.json
+++ b/app/www/server/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.1",
     "mongodb": "^2.1.16",
     "morgan": "~1.6.1",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "parseurl": "^1.3.1"
   }
 }
