--- a/app/www/server/package.json
+++ b/app/www/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socket",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node bin/www.js",
@@ -14,7 +14,9 @@
     "express": "~4.13.1",
     "mongodb": "^2.1.16",
     "morgan": "~1.6.1",
+    "parseurl": "^1.3.1",
+    "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5",
-    "parseurl": "^1.3.1"
+    "socketio-file-upload": "^0.4.6"
   }
 }
