--- a/aplication/package.json
+++ b/aplication/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Ideus-phonegap-framework",
   "version": "1.6.0",
-  "description": "Our HTML5 boilerplate",
+  "description": "Our phonegap boilerplate",
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
