--- a/aplication/package.json
+++ b/aplication/package.json
@@ -6,6 +6,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "color": "^0.11.3",
+    "colour": "^0.7.1",
     "del": "^2.2.2",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.1",
@@ -23,7 +25,7 @@
   "scripts": {
     "dev": "cls && echo Please wait ... && gulp dev",
     "prod": "cls && echo Please wait ... && gulp prod"
-    },
+  },
   "author": {
     "name": "iDeus",
     "url": "https://github.com/ideus-team/phonegap-framework/"
