--- a/application/package.json
+++ b/application/package.json
@@ -20,6 +20,7 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.4",
     "jquery": "^3.1.1",
+    "systemjs-plugin-text": "0.0.9",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0"
   },
