--- a/application/package.json
+++ b/application/package.json
@@ -11,6 +11,7 @@
     "del": "^2.2.2",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.0",
     "gulp-csscomb": "^3.0.8",
     "gulp-duration": "0.0.0",
     "gulp-imagemin": "^3.0.3",
@@ -18,6 +19,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-sizereport": "^1.2.0",
     "gulp-streamify": "^1.0.2",
+    "gulp-template-compile-es6": "^1.0.3",
     "gulp-uglify": "^1.5.4",
     "jquery": "^3.1.1",
     "underscore": "^1.8.3",
