--- a/application/package.json
+++ b/application/package.json
@@ -3,7 +3,8 @@
   "version": "1.6.0",
   "description": "Our phonegap boilerplate",
   "devDependencies": {
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "backbone": "^1.3.3",
     "browserify": "^13.1.0",
