--- a/application/package.json
+++ b/application/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Ideus-phonegap-framework",
-  "version": "1.6.0",
-  "description": "Our phonegap boilerplate",
+  "name": "iDeus-cordova-framework",
+  "version": "1.0.0",
+  "description": "Cordova boilerplate based on backboneJS",
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
