--- a/application/package.json
+++ b/application/package.json
@@ -17,6 +17,7 @@
     "gulp-duration": "0.0.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-newer": "^1.3.0",
+    "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.3.2",
     "gulp-sizereport": "^1.2.0",
     "gulp-streamify": "^1.0.2",
