--- a/application/package.json
+++ b/application/package.json
@@ -20,11 +20,14 @@
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.3.2",
     "gulp-sizereport": "^1.2.0",
+    "gulp-sourcemaps": "^2.3.1",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.4",
     "jquery": "^3.1.1",
     "underscore": "^1.8.3",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.8.0"
   },
   "dependencies": {},
   "scripts": {
